--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.3.1.BUILD-SNAPSHOT</version>
     </parent>
+    
+    <properties>
+      <powermock.version>1.6.2</powermock.version>
+   </properties>
+   
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -64,6 +69,25 @@
 		<groupId>mysql</groupId>
 		<artifactId>mysql-connector-java</artifactId>
 	</dependency>
+	
+	<dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.powermock</groupId>
+          <artifactId>powermock-module-junit4</artifactId>
+          <version>${powermock.version}</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>org.powermock</groupId>
+          <artifactId>powermock-api-easymock</artifactId>
+          <version>${powermock.version}</version>
+          <scope>test</scope>
+      </dependency>
 
     </dependencies>
     <build>
